add api /v1/admin/users and setup middleware
