# internal/delivery/http/controller/user_controller.go
@@ -1,9 +1,8 @@
 package controller
 
 import (
-	"errors"
+	"heroku/internal/delivery/http/model"
 	uc "heroku/internal/usecase"
-	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
@@ -25,14 +24,35 @@ type UserController struct {
 // @Failure 400 {object} model.ErrorResponse
 // @Router /v1/users/{user_id} [get]
 func (uc *UserController) GetUserInfo(ctx *gin.Context) {
-	userIDStr := ctx.Param("user_id")
-	userID, err := strconv.Atoi(userIDStr)
-	if err != nil {
-		uc.Failure(ctx, errors.New("user_id must is number"))
+
+	var userRequest model.UserRequest
+	if err := ctx.ShouldBindUri(&userRequest); err != nil {
+		uc.Failure(ctx, err)
 		return
 	}
 
-	userInfo, err := uc.UserUseCase.GetUserInfo(userID)
+	userInfo, err := uc.UserUseCase.GetUserInfo(*userRequest.UserID)
+	if err != nil {
+		uc.Failure(ctx, err)
+		return
+	}
+
+	uc.Success(ctx, userInfo)
+}
+
+// @BasePath /v1/admin/users
+// PingExample godoc
+// @Summary Get all user infor for admin
+// @Schemes
+// @Description get all user info
+// @Tags v1
+// @Accept json
+// @Produce json
+// @Success 200 {object} model.SuccessResponse
+// @Failure 400 {object} model.ErrorResponse
+// @Router /v1/admin/users[get]
+func (uc *UserController) GetAllUserInfo(ctx *gin.Context) {
+	userInfo, err := uc.UserUseCase.GetAllUserInfo()
 	if err != nil {
 		uc.Failure(ctx, err)
 		return
